@@ -148,6 +148,10 @@ double speed_mpn_add_n __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_addlsh_n __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_addlsh1_n __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_addlsh2_n __GMP_PROTO ((struct speed_params *s));
+double speed_mpn_addlsh1_n_ip1 __GMP_PROTO ((struct speed_params *s));
+double speed_mpn_addlsh2_n_ip1 __GMP_PROTO ((struct speed_params *s));
+double speed_mpn_addlsh1_n_ip2 __GMP_PROTO ((struct speed_params *s));
+double speed_mpn_addlsh2_n_ip2 __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_add_n_sub_n __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_and_n __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_andn_n __GMP_PROTO ((struct speed_params *s));
@@ -289,6 +293,8 @@ double speed_mpn_sub_n __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_sublsh_n __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_sublsh1_n __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_sublsh2_n __GMP_PROTO ((struct speed_params *s));
+double speed_mpn_sublsh1_n_ip1 __GMP_PROTO ((struct speed_params *s));
+double speed_mpn_sublsh2_n_ip1 __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_submul_1 __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_toom2_sqr __GMP_PROTO ((struct speed_params *s));
 double speed_mpn_toom3_sqr __GMP_PROTO ((struct speed_params *s));
